unpackaged/main/default/objects/SurveyResult__c/SurveyResult__c.object-meta.xml
<CustomObject>
    <description>Survey reuslts from Clicktools</description>
    <label>SurveyResult</label>
    <nameField>
        <label>SurveyResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyResults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>