unpackaged/main/default/objects/SurveyResult__c/fields/Annual_trade_show_budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_trade_show_budget__c</fullName>
    <label>Annual trade show budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No more than £25k</fullName>
            </value>
            <value>
                <fullName>From £25k to £50k</fullName>
            </value>
            <value>
                <fullName>From £50k to £175k</fullName>
            </value>
            <value>
                <fullName>From £175k to £700k</fullName>
            </value>
            <value>
                <fullName>Over £700k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>