unpackaged/main/default/objects/SurveyResult__c/fields/Aware_Other_GES_Items__c.field-meta.xml
<CustomField>
    <fullName>Aware_Other_GES_Items__c</fullName>
    <label>Aware.Other GES Items</label>
    <length>254</length>
    <type>Text</type>
</CustomField>