unpackaged/main/default/objects/SurveyResult__c/fields/Best_email_address__c.field-meta.xml
<CustomField>
    <fullName>Best_email_address__c</fullName>
    <label>Best email address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>