unpackaged/main/default/objects/SurveyResult__c/fields/Best_time_to_call__c.field-meta.xml
<CustomField>
    <fullName>Best_time_to_call__c</fullName>
    <label>Best time to call</label>
    <length>20</length>
    <type>Text</type>
</CustomField>