unpackaged/main/default/objects/SurveyResult__c/fields/Business_type__c.field-meta.xml
<CustomField>
    <fullName>Business_type__c</fullName>
    <label>Business type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>