unpackaged/main/default/objects/SurveyResult__c/fields/business_type_other__c.field-meta.xml
<CustomField>
    <fullName>business_type_other__c</fullName>
    <label>Business type other</label>
    <length>254</length>
    <type>Text</type>
</CustomField>