unpackaged/main/default/objects/SurveyResult__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>254</length>
    <type>Text</type>
</CustomField>