unpackaged/main/default/objects/SurveyResult__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>254</length>
    <type>Text</type>
</CustomField>