unpackaged/main/default/objects/SurveyResult__c/fields/Disat_AV_Delay__c.field-meta.xml
<CustomField>
    <fullName>Disat_AV_Delay__c</fullName>
    <label>Disat. AV Delay</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact difficulties</fullName>
            </value>
            <value>
                <fullName>Mistake/s</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Slow to act</fullName>
            </value>
            <value>
                <fullName>Delivery/installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>