unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Electrical_error__c.field-meta.xml
<CustomField>
    <fullName>Disat_Electrical_error__c</fullName>
    <label>Disat.Electrical error</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice/order error</fullName>
            </value>
            <value>
                <fullName>Missing item/s</fullName>
            </value>
            <value>
                <fullName>Not as plan</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>