unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Flooring_error__c.field-meta.xml
<CustomField>
    <fullName>Disat_Flooring_error__c</fullName>
    <label>Disat.Flooring error</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice/order error</fullName>
            </value>
            <value>
                <fullName>Missing (partially/entirely)</fullName>
            </value>
            <value>
                <fullName>Not as expected</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Positioning</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>