unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Furniture_quality__c.field-meta.xml
<CustomField>
    <fullName>Disat_Furniture_quality__c</fullName>
    <label>Disat.Furniture quality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colour not as expected</fullName>
            </value>
            <value>
                <fullName>Faulty/damaged</fullName>
            </value>
            <value>
                <fullName>General product quality</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Service/staff</fullName>
            </value>
            <value>
                <fullName>Value for money</fullName>
            </value>
            <value>
                <fullName>Unclean</fullName>
            </value>
            <value>
                <fullName>Unprofessional</fullName>
            </value>
            <value>
                <fullName>Colour</fullName>
            </value>
            <value>
                <fullName>Stock/product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>