unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Mains_Power__c.field-meta.xml
<CustomField>
    <fullName>Disat_Mains_Power__c</fullName>
    <label>Disat.Mains Power</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Distribution box</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>