unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Other_AV__c.field-meta.xml
<CustomField>
    <fullName>Disat_Other_AV__c</fullName>
    <label>Disat. Other AV</label>
    <length>254</length>
    <type>Text</type>
</CustomField>