unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Other_D_B__c.field-meta.xml
<CustomField>
    <fullName>Disat_Other_D_B__c</fullName>
    <label>Disat.Other D&amp;B</label>
    <length>254</length>
    <type>Text</type>
</CustomField>