unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Other_electrics__c.field-meta.xml
<CustomField>
    <fullName>Disat_Other_electrics__c</fullName>
    <label>Disat.Other electrics</label>
    <length>254</length>
    <type>Text</type>
</CustomField>