unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Other_N200_app__c.field-meta.xml
<CustomField>
    <fullName>Disat_Other_N200_app__c</fullName>
    <label>Disat.Other N200 app</label>
    <length>254</length>
    <type>Text</type>
</CustomField>