unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Other_name_board__c.field-meta.xml
<CustomField>
    <fullName>Disat_Other_name_board__c</fullName>
    <label>Disat.Other name board</label>
    <length>254</length>
    <type>Text</type>
</CustomField>