unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Shell_Carpet_delays__c.field-meta.xml
<CustomField>
    <fullName>Disat_Shell_Carpet_delays__c</fullName>
    <label>Disat.Shell Carpet delays</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Difficult to contact</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Mistake/s</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Slow to act</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>