unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Shell_Scheme_Carpet__c.field-meta.xml
<CustomField>
    <fullName>Disat_Shell_Scheme_Carpet__c</fullName>
    <label>Disat.Shell Scheme Carpet</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Error/s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>