unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Specialist_Lighting__c.field-meta.xml
<CustomField>
    <fullName>Disat_Specialist_Lighting__c</fullName>
    <label>Disat.Specialist Lighting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabling</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Error/s</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>