unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Specialist_Lighting_quality__c.field-meta.xml
<CustomField>
    <fullName>Disat_Specialist_Lighting_quality__c</fullName>
    <label>Disat.Specialist Lighting quality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>Fault/damage</fullName>
            </value>
            <value>
                <fullName>Not as expected</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Product/equipment</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Unprofessional</fullName>
            </value>
            <value>
                <fullName>Value for money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>