unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Stand_communication__c.field-meta.xml
<CustomField>
    <fullName>Disat_Stand_communication__c</fullName>
    <label>Disat.Stand communication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Difficult to contact</fullName>
            </value>
            <value>
                <fullName>Inadequate advice</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Slow response</fullName>
            </value>
            <value>
                <fullName>Unprofessional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>