unpackaged/main/default/objects/SurveyResult__c/fields/Disat_Stand_errors__c.field-meta.xml
<CustomField>
    <fullName>Disat_Stand_errors__c</fullName>
    <label>Disat.Stand errors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect information</fullName>
            </value>
            <value>
                <fullName>Missing item/s</fullName>
            </value>
            <value>
                <fullName>Not as expected</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Sizing/dimensions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>